--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             stroke: #000;
             shape-rendering: crispEdges;
         }
+        .bar {
+            fill: steelblue;
+        }
     </style>
 </head>
 <body>
