--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>COVID Data Narrative Visualization</title>
-    <script src="https://d3js.org/d3.v6.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.css" integrity="sha512-4rPgyv5iG0PZw8E+oRdfN/Gq+yilzt9rQ8Yci2jJ15rAyBmF0HBE4wFjBkoB72cxBeg63uobaj1UcNt/scV93w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         .annotation {
             font-size: 12px;
@@ -21,10 +21,72 @@
         .bar {
             fill: steelblue;
         }
+        .section {
+            margin: 50px 0;
+        }
+        #title_text {
+            text-align: center;
+            padding: 100px;
+        }
+        #visualization {
+            width: 100%;
+            height: 600px;
+        }
     </style>
 </head>
 <body>
-    <div id="visualization"></div>
-    <script src="script.js"></script>
+    <div id="fullpage">
+        <div class="section s0">
+            <div id="title_text">
+                <h1>COVID Data Visualization</h1>
+                <h3>An Interactive Data Visualization Project</h3>
+                <p>This visualization takes the user through the COVID-19 dataset from 2021 to 2023.</p>
+            </div>       
+        </div>
+
+        <div class="section s1">
+            <div class="container">
+                <div id="visualization"></div>
+                <div id="content_div">
+                    <h2>Scene 1</h2>
+                    <p>This scene shows the COVID-19 cases for the year 2021.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="section s2">
+            <div class="container">
+                <div id="visualization"></div>
+                <div id="content_div">
+                    <h2>Scene 2</h2>
+                    <p>This scene shows the COVID-19 cases for the year 2022.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="section s3">
+            <div class="container">
+                <div id="visualization"></div>
+                <div id="content_div">
+                    <h2>Scene 3</h2>
+                    <p>This scene shows the COVID-19 cases for the year 2023.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.js" integrity="sha512-gSf3NCgs6wWEdztl1e6vUqtRP884ONnCNzCpomdoQ0xXsk06lrxJsR7jX5yM/qAGkPGsps+4bLV5IEjhOZX+gg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+        new fullpage('#fullpage', {
+            autoScrolling: true,
+            navigation: true,
+            anchors: ['section0', 'section1', 'section2', 'section3'],
+            navigationTooltips: ['Intro', 'Scene1', 'Scene2', 'Scene3'],
+            showActiveTooltip: true,
+            scrollingSpeed: 1000,
+        });
+    </script>
+    <script src="https://d3js.org/d3.v6.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
