fixed graph rendering

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="section s1">
             <div class="container">
-                <div id="visualization"></div>
+                <div id="visualization1"></div>
                 <div id="content_div">
                     <h2>Scene 1</h2>
                     <p>This scene shows the COVID-19 cases for the year 2021.</p>
@@ -56,7 +56,7 @@
 
         <div class="section s2">
             <div class="container">
-                <div id="visualization"></div>
+                <div id="visualization2"></div>
                 <div id="content_div">
                     <h2>Scene 2</h2>
                     <p>This scene shows the COVID-19 cases for the year 2022.</p>
@@ -66,7 +66,7 @@
 
         <div class="section s3">
             <div class="container">
-                <div id="visualization"></div>
+                <div id="visualization3"></div>
                 <div id="content_div">
                     <h2>Scene 3</h2>
                     <p>This scene shows the COVID-19 cases for the year 2023.</p>
