--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             width: 100%;
             height: 600px;
         }
+        #year-select {
+            display: block;
+            margin: 20px auto;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -46,30 +51,18 @@
 
         <div class="section s1">
             <div class="container">
-                <div id="visualization1"></div>
-                <div id="content_div">
-                    <h2>Scene 1</h2>
-                    <p>This scene shows the COVID-19 cases for the year 2021.</p>
+                <div id="year-select">
+                    <label for="year">Select Year: </label>
+                    <select id="year" name="year">
+                        <option value="2021">2021</option>
+                        <option value="2022">2022</option>
+                        <option value="2023">2023</option>
+                    </select>
                 </div>
-            </div>
-        </div>
-
-        <div class="section s2">
-            <div class="container">
-                <div id="visualization2"></div>
+                <div id="visualization"></div>
                 <div id="content_div">
-                    <h2>Scene 2</h2>
-                    <p>This scene shows the COVID-19 cases for the year 2022.</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="section s3">
-            <div class="container">
-                <div id="visualization3"></div>
-                <div id="content_div">
-                    <h2>Scene 3</h2>
-                    <p>This scene shows the COVID-19 cases for the year 2023.</p>
+                    <h2>Scatterplot</h2>
+                    <p>This scatterplot shows the COVID-19 deaths for each state by year.</p>
                 </div>
             </div>
         </div>
@@ -80,13 +73,14 @@
         new fullpage('#fullpage', {
             autoScrolling: true,
             navigation: true,
-            anchors: ['section0', 'section1', 'section2', 'section3'],
-            navigationTooltips: ['Intro', 'Scene1', 'Scene2', 'Scene3'],
+            anchors: ['section0', 'section1'],
+            navigationTooltips: ['Intro', 'Scatterplot'],
             showActiveTooltip: true,
             scrollingSpeed: 1000,
         });
     </script>
     <script src="https://d3js.org/d3.v6.min.js"></script>
+    <script src="js/scatterPlot.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
